# ini_core

./: Cargo.toml  hello.ini  license.txt  readme.md
.github/workflows/: ci.yml
bench/: Cargo.toml  readme.md
bench/benches/: big.ini  main.rs  small.ini
import/: Cargo.toml
import/examples/: main.rs
import/src/: lib.rs
src/: lib.rs  tests.rs
src/parse/: avx2.rs  generic.rs  mod.rs  sse2.rs  swar32.rs  swar64.rs
